money页面布局完成，键盘功能完成

--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -13,3 +13,13 @@ ul,ol{
 button,input{
   font: inherit;
 }
+input{
+  background:none;
+  outline:none;
+  border:none;
+}
+button{
+  background: none;
+  outline: none;
+  border: none;
+}
