--- a/src/assets/style/helper.scss
+++ b/src/assets/style/helper.scss
@@ -20,3 +20,7 @@ $color-shadow: rgba(0,0,0.25);
     clear: both;
   }
 }
+.clickStyle{
+  background: rgba(220,220,220,0.5);
+  transition: background-color 10ms linear;
+}
