--- a/src/assets/style/helper.scss
+++ b/src/assets/style/helper.scss
@@ -21,6 +21,6 @@ $color-shadow: rgba(0,0,0.25);
   }
 }
 .clickStyle{
-  background: rgba(220,220,220,0.5);
+  background: #D0D0D0;
   transition: background-color 10ms linear;
 }
